--- a/email.html
+++ b/email.html
@@ -18,7 +18,7 @@
         <label>
             Feel Free to Share your Thoughts:
         </label><br>
-        <textarea name=" " id="" cols="30" rows="10">
+        <textarea name="My Message:" id="" cols="30" rows="10">
         </textarea>
         <br>
         <input type="submit">
