--- a/index.html
+++ b/index.html
@@ -1,99 +1,82 @@
-
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="master.css">
-    <title>About Me😊</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&family=Montserrat:wght@200&family=Sacramento&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <center>
-        <h1>AAKASH S</h1><br>
-        <em>Student and Learning Web Development</em>
-    </center>
-    <hr>
-    <h3>Schools I studied</h3>
-    <ol>
-        <li>St. Joseph Matric Hr. Sec School (2008-2014)</li>
-        <li>Kaligi Ranganathan Montford Matric Hr. Sec School(2014-2022)</li>
-        <li>Chennai Institute of Technology (Currently Pursuing Bachelor's in Computer Science Engineering )</li>
-    </ol>
-    <hr>
-    <h3>Areas of Interest</h3>
-    <table border="1" >
-        <tbody >
-            <tr>
-                <td><strong>Mathematics</strong></td>
-                <td><strong>Physics</strong></td>
-            </tr>
-            <tr>
-                <td><strong>Programming</strong></td>
-                <td><strong>Biology</strong>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <hr>
-    <h3>Skills</h3>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Skillset</th>
-                <th>My Rating</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>
-                    Typing
-                </td>
-                <td>
-                    ⭐⭐⭐⭐⭐
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Python
-                </td>
-                <td>
-                    ⭐⭐⭐
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Hardware Literacy
-                </td>
-                <td>
-                    ⭐⭐⭐⭐
-                </td>
-            </tr>
-          <hr>
-        </tbody>
-    </table>
-    <hr>
-    <h3>Hobbies</h3>
-    <ol>
-        <li>Gaming and Games I play
-            <ul>
-                <li><a href="https://youtu.be/AKXiKBnzpBQ" target="_blank">Elden Ring</a></li>
-                <li><a href="https://www.youtube.com/watch?v=eaW0tYpxyp0" target="_blank">Red Dead Redemption 2</a></li>
-                <li><a href="https://www.youtube.com/watch?v=K0u_kAWLJOA" target="_blank">God of War</a></li>
-                <li><a href="https://youtu.be/hh5HV4iic1Y"target="_blank">Uncharted 4 A thief's End</a></li>
-            </ul>
-        </li>
-        <li>Reading Books and the Books i read so far
-            <ul>
-                <li><a href="https://www.amazon.in/Atomic-Habits-James-Clear/dp/1847941834/ref=sr_1_2?crid=263QJZX12NV0V&keywords=atomic+habits&qid=1678963262&sprefix=atomic+habits%2Caps%2C280&sr=8-2" target="_blank
-                    ">Atomic-Habits By James-Clear</a></li>
-            </ul>
-        </li>
-    </ol>
-    <hr>
-    <center><a href="https://www.linkedin.com/in/aakash-shalini-30870b256/" target="_blank">My Linkedin Profile</a> <br><a href="email.html" target="_blank">Email me✉️</a>
-    </center>
-</body>
+    <div class="top-container">
+        <center><h1 class="intro">Aakash<br></h1><br><p class="stu">Student and Learning web development</p><br><img src="png-transparent-gray-mountain-range-mountain-icon-mountain-computer-wallpaper-desktop-wallpaper-elevation-thumbnail.png" alt=""></center>
+<img src="cloud.png" alt="" class="cloud-1">
+<img src="cloud.png" alt="" class="cloud-2">
+    </div>
+<center>
+    <div class="middle-container">
+        <div class="profile">
+          <img src="https://media3.giphy.com/media/mDLek2Pl1Q9PwH0dXd/giphy.gif?cid=ecf05e4741m2mau6oe25uh7obhckdh7kt1pwfbrak94z8opu&rid=giphy.gif&ct=s" alt="" class="hello">
+          <h2 class="salu">Hello.</h2>
+          <p>First of all Thank you for visiting this page</p>
+        </div>
+        <div class="skills">
+          <h2>Schools I Studied</h2>
+          <div class="skill-row">
+            <img class="school" src="https://media4.giphy.com/media/cAcofT0wwuRnwZ8PGE/giphy.gif?cid=ecf05e477bm9mzo36ynnxymt48ydlgqukrwhr567yxgxullu&rid=giphy.gif&ct=s" alt="">
+            <h3>St. Joseph Matric Hr. Sec. School</h3>
+            <p class="schools-desc">I Studied Here from 2008-2014 and here I started my journey...</p><br>
+            <h3>Kaligi Ranganathan Montford Matric Hr. Sec. School</h3>
+            <p>I did my High School and Higher Secondary Studies here and finally completed my schooling</p><br>
+            <h3>Chennai Institute of Technology</h3>
+            <p>Currently pursuing my Bachelor's Degree in Computer Science Engineering</p><br><br>
+          </div>
+          <div class="skill-row">
+            <h2>Areas of Interest</h2>
+            <table>
+              <tr>
+                <td style="padding: 30px;"><img src="https://media2.giphy.com/media/KzWMBa9V3z8jHJCEC7/giphy.gif?cid=ecf05e47vvke9lrruayhq7hn6264lw9qbcx74mq9n67mjx8l&rid=giphy.gif&ct=s" alt="" class="mcsp"></td>
+                <td style="padding: 30px;"><img src="https://media0.giphy.com/media/Lpa8zu1JVeu0v2EI1B/giphy.gif?cid=ecf05e47oiar8mnvupgfk3aon9zeg6rgfdic1lxonropweig&rid=giphy.gif&ct=s" alt="" class="mcsp"></td>
+                <td style="padding: 30px;"><img src="https://media0.giphy.com/media/L3LDZhbltkQ2jFJ363/giphy.gif?cid=ecf05e4778ctblqo4090gv0iuhjvsmdccahl6cbs146gnr6g&rid=giphy.gif&ct=s" alt="" class="mcsp"></td>
+                <td style="padding: 30px;"><img src="https://media3.giphy.com/media/h4TP7zsNRxcXVG9L7T/giphy.gif?cid=ecf05e47y2a3f1go60k9rykm8r2oici5gqcvabku7du84jrv&rid=giphy.gif&ct=s" alt="" class="mcsp"></td>
+              </tr>
+              <tr>
+                <td style="padding-left:85px;">Physics</td>
+                <td style="padding-left:68px;">Mathematics</td>
+                <td style="padding-left:83px;">Biology</td>
+                <td style="padding-left:52px;">Computer Science</td>
 
+              </tr>
+            </table>
+          </div>
+        </div>
+        <div class="ability">
+          <h2>Skills</h2>
+          <table>
+            <tr>
+              <td style="padding-left:171px;"><img src="https://media1.giphy.com/media/rekW9QkVtGnV96uByT/giphy.gif?cid=ecf05e47jnm3dqwwkrj8u5r6qu9bjvjoiy1iuo8oanm75oru&rid=giphy.gif&ct=s" alt="" class="mcsp"></td>
+              <td><p style="padding-left:30px;line-height:2;">I Love typing and i am doing it right from age 14 <br>and i average around 85-90 WPM</p></td>
+            </tr>
+            <tr>
+              <td style="padding-left:30px;padding-top:30px;">I can code in Python and C at a begineer to intermediate level</td>
+              <td style="padding-left:84px;"><img src="https://media0.giphy.com/media/LMt9638dO8dftAjtco/giphy.gif?cid=ecf05e47qu959i03k0lylgio5urqteho6ppj703tld48huoc&rid=giphy.gif&ct=s" alt="" class="mcsp"></td>
+            </tr>
+            <tr>
+              <td style="padding-left:145px;"><img src="https://media3.giphy.com/media/owdNBw0LTVbWGtu8NW/giphy.gif?cid=ecf05e476fw99jda74wc704hfzck6jjmh2fdcie0v7wpe4sl&rid=giphy.gif&ct=s" alt="" class="mcsp"></td>
+              <td>I Love to Tinker around Desktop and Laptop Hardware <br>it never failed me to thrill me..</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p>© Name Surname.</p>
+      </div>
+   </center>   
+</body>
 </html>
