--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&family=Montserrat:wght@200&family=Sacramento&display=swap" rel="stylesheet">
@@ -72,10 +72,9 @@
         </div>
       </div>
       <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© Name Surname.</p>
+        <a class="footer-link" href="https://www.linkedin.com/in/aakash-shalini-30870b256/"><img src="li.png" alt="" class="li"></a>
+        <a href="email.html" class="footer-link"><img src="logo-gmail-9951.png" alt="" class="li"></a>
+        <p style="font-family: Montserrat, sans-serif;">© Aakash S 2023.</p>
       </div>
    </center>   
 </body>
